[package]
name = "stock_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
yahoo_finance_api = "2.1.0"
time = "0.3"
tokio-test = "0.4.3"
chrono = "0.4"
chrono-tz = "0.8.5"
chronoutil = "0.2.6"


