[package]
name = "stock_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive"] }
plotters = "0.3.5"
yahoo_finance_api = "2.1.0"
time = "0.2.25"
tokio-test = "0.4.0"
